@@ -236,6 +236,8 @@ struct rd_cut {
   char cut_start_daypart[9];
   char cut_end_daypart[9];
   char cut_origin_name[65];
+  char cut_origin_login_name[256];
+  char cut_source_hostname[256];
   unsigned cut_weight;
   struct tm cut_last_play_datetime;
   unsigned cut_play_counter;
